Fixing form on Safari

--- a/less/pages/additional-info.less
+++ b/less/pages/additional-info.less
@@ -11,6 +11,7 @@
     }
     .container {
       display: inline-block;
+      vertical-align: top;
       text-align: left;
       padding: 30px;
     }
